[workspace]
resolver = "2"
members = [
    "libraries/ports-interface",
    "libraries/scrypto-interface",
    "libraries/common",
    "libraries/package-loader",
    "libraries/gateway-client",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "Scrypto Interfaces"

[workspace.dependencies]
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", version = "1.2.0" }
utils = { git = "https://github.com/radixdlt/radixdlt-scrypto", version = "1.2.0" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", version = "1.2.0" }
radix-common = { git = "https://github.com/radixdlt/radixdlt-scrypto", version = "1.2.0" }
radix-transactions = { git = "https://github.com/radixdlt/radixdlt-scrypto", version = "1.2.0" }
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", version = "1.2.0" }
radix-engine-interface = { git = "https://github.com/radixdlt/radixdlt-scrypto", version = "1.2.0" }
radix-substate-store-interface = { git = "https://github.com/radixdlt/radixdlt-scrypto", version = "1.2.0" }

scrypto-test = { git = "https://github.com/radixdlt/radixdlt-scrypto", version = "1.2.0" }

state-manager = { git = "https://github.com/radixdlt/babylon-node", tag = "v1.2.1" }

scrypto-interface = { path = "./libraries/scrypto-interface" }
common = { path = "./libraries/common" }


env_logger = "0.11.2"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
overflow-checks = true

[workspace.lints.clippy]
arithmetic_side_effects = "warn"
