[package]
name = "scrypto-interface"
version.workspace = true
edition.workspace = true
description = "A library that provides a set of macros for writing and using Scrypto interfaces"

[dependencies]
heck = { version = "0.5.0" }
proc-macro2 = { version = "1.0.76" }
quote = { version = "1.0.35" }
syn = { version = "2.0.48", features = ["full", "extra-traits"] }

[lib]
doctest = false
proc-macro = true

[lints]
workspace = true
